--- a/MetricsManager/MetricsAgent/MetricsAgent.csproj
+++ b/MetricsManager/MetricsAgent/MetricsAgent.csproj
@@ -5,8 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.2" />
+    <PackageReference Include="Moq" Version="4.17.2" />
     <PackageReference Include="NLog" Version="4.7.15" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.115.5" />
   </ItemGroup>
 
 
