--- a/MetricsManager/MetricsAgentTests/MetricsAgentTests.csproj
+++ b/MetricsManager/MetricsAgentTests/MetricsAgentTests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+    <PackageReference Include="Moq" Version="4.17.2" />
     <PackageReference Include="NLog" Version="4.7.15" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
