--- a/MetricsManager/MetricsAgent/MetricsAgent.csproj
+++ b/MetricsManager/MetricsAgent/MetricsAgent.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.2" />
     <PackageReference Include="Moq" Version="4.17.2" />
     <PackageReference Include="NLog" Version="4.7.15" />
