--- a/MetricsManager/MetricsAgent/MetricsAgent.csproj
+++ b/MetricsManager/MetricsAgent/MetricsAgent.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
     <PackageReference Include="Quartz" Version="3.4.0" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.115.5" />
+    <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="6.0.1" />
   </ItemGroup>
 
 
